<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lhm3d.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_create"
            app:destination="@id/navigation_create" />
        <action
            android:id="@+id/action_home_to_animation"
            app:destination="@id/navigation_animation" />
        <action
            android:id="@+id/action_home_to_modelView"
            app:destination="@id/navigation_animation" />
        <action
            android:id="@+id/action_home_to_gallery"
            app:destination="@id/navigation_gallery" />
        <action
            android:id="@+id/action_home_to_tutorial"
            app:destination="@id/navigation_tutorial" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.lhm3d.ui.create.CreateFragment"
        android:label="@string/nav_create"
        tools:layout="@layout/fragment_create" >
        <action
            android:id="@+id/action_create_to_animation"
            app:destination="@id/navigation_animation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.lhm3d.ui.gallery.GalleryFragment"
        android:label="@string/nav_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_gallery_to_animation"
            app:destination="@id/navigation_animation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lhm3d.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
        
    <fragment
        android:id="@+id/navigation_animation"
        android:name="com.example.lhm3d.ui.animation.AnimationFragment"
        android:label="Animation"
        tools:layout="@layout/fragment_animation" >
        <argument
            android:name="modelId"
            app:argType="string" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_tutorial"
        android:name="com.example.lhm3d.ui.tutorial.TutorialFragment"
        android:label="Tutorial"
        tools:layout="@layout/fragment_tutorial" />
        
    <fragment
        android:id="@+id/navigation_preview"
        android:name="com.example.lhm3d.ui.preview.PreviewFragment"
        android:label="Preview"
        tools:layout="@layout/fragment_preview">
        <argument
            android:name="imageUri"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="modelId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_preview_to_animation"
            app:destination="@id/navigation_animation" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.lhm3d.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>